modified:   src/ir/basic-block.vala 	modified:   src/ir/function.vala 	modified:   src/ir/global-variable.vala 	modified:   src/ir/instruction-binary.vala 	modified:   src/ir/instruction-branch.vala 	new file:   src/ir/instruction-call-base.vala 	modified:   src/ir/instruction-call.vala 	modified:   src/ir/instruction-cast.vala 	modified:   src/ir/instruction.vala 	modified:   src/ir/ivalue-visitor.vala 	modified:   src/ir/use-def.vala 	modified:   src/meson.build

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,7 +2,6 @@ musys_ir_src = files([
     'base/exception.vala',
     'base/stdc.vala',
     'base/hash.vala',
-    'base/reflist.vala',
     'base/fmt.vala',
     'base/apint.vala',
     'base/base.vala',
@@ -42,6 +41,7 @@ musys_ir_src = files([
     'ir/instruction-index-ptr.vala',
     'ir/instruction-jump-base.vala',
     'ir/instruction-compare.vala',
+    'ir/instruction-call-base.vala',
     'ir/instruction-call.vala',
     'ir/ivalue-visitor.vala',
 ])
