modified:   src/base/stream.vala 	modified:   src/ir/instruction-alloca.vala 	modified:   src/ir/instruction-binary.vala 	modified:   src/ir/instruction-branch.vala 	modified:   src/ir/instruction-call-base.vala 	modified:   src/ir/instruction-compare.vala 	new file:   src/ir/instruction-index-base.vala 	modified:   src/ir/instruction-index-extract.vala 	modified:   src/ir/instruction-index-insert.vala 	modified:   src/ir/instruction-index-ptr.vala 	modified:   src/ir/instruction-jump-base.vala 	modified:   src/ir/instruction-jump.vala 	modified:   src/ir/instruction-phi.vala 	modified:   src/ir/instruction-return.vala 	modified:   src/ir/instruction-store.vala 	modified:   src/ir/instruction-unary.vala 	modified:   src/ir/instruction.vala 	modified:   src/ir/ivalue-visitor.vala 	modified:   src/ir/use-def.vala 	modified:   src/meson.build

--- a/src/meson.build
+++ b/src/meson.build
@@ -37,6 +37,7 @@ musys_ir_src = files([
     'ir/instruction-store.vala',
     'ir/instruction-jump.vala',
     'ir/instruction-return.vala',
+    'ir/instruction-index-base.vala',
     'ir/instruction-index-insert.vala',
     'ir/instruction-index-extract.vala',
     'ir/instruction-index-ptr.vala',
