modified:   src/ir-util/writer.vala 	modified:   src/ir/instruction-binary.vala 	modified:   src/ir/module.vala 	modified:   src/ir/value-type-check.vala 	modified:   src/meson.build 	modified:   src/type/value-type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -55,11 +55,15 @@ musys_ir_deps = [
     dependency('gee-0.8')
 ]
 
-musys_lib = library(
+add_project_arguments(['-h', 'musys.internal.h'], language: 'vala')
+
+musys_lib = shared_library(
     'musys',
     sources: musys_ir_src,
     dependencies: musys_ir_deps,
-    include_directories: musys_include
+    include_directories: musys_include,
+    install: true,
+    install_dir: [true, true, true]
 )
 
 message(musys_lib.name())
