modified:   meson.build 	modified:   src/base/exception.vala 	modified:   src/ir-util/writer.vala 	modified:   src/ir/basic-block.vala 	modified:   src/ir/constant.vala 	modified:   src/ir/function.vala 	modified:   src/ir/global-object.vala 	modified:   src/ir/instruction-list.vala 	modified:   src/ir/instruction-return.vala 	modified:   src/ir/module.vala 	modified:   src/meson.build 	modified:   src/type/type-context.vala 	modified:   src/type/value-type.vala

--- a/meson.build
+++ b/meson.build
@@ -5,3 +5,8 @@ message('[Musys] Include directory: '+ musys_include_str)
 musys_include=include_directories(musys_include_str)
 
 subdir('src')
+
+musys_dep = declare_dependency(
+    include_directories: [ '.', 'include' ],
+    link_with: musys_lib
+)
