--- a/src/meson.build
+++ b/src/meson.build
@@ -47,8 +47,9 @@ musys_ir_src = files([
     'ir/instruction-call.vala',
     'ir/ivalue-visitor.vala',
     'ir/module.vala',
-    'ir-util/writer.vala',
     'ir-util/value-type-index.vala',
+    'ir-util/basicblock.vala',
+    'ir-util/writer.vala',
 ])
 
 musys_ir_deps = [
