modified:   src/base/stream.vala 	modified:   src/ir-util/basicblock.vala 	new file:   src/ir-util/module.vala 	modified:   src/ir-util/writer.vala 	modified:   src/meson.build 	modified:   src/type/aggregate-type.vala 	modified:   src/type/function-type.vala 	modified:   src/type/type-context.vala 	modified:   src/type/type.vala 	modified:   src/type/value-type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -49,6 +49,7 @@ musys_ir_src = files([
     'ir/module.vala',
     'ir-util/value-type-index.vala',
     'ir-util/basicblock.vala',
+    'ir-util/module.vala',
     'ir-util/writer.vala',
 ])
 
