添加了 StructType 类(未完成) 	modified:   include/musys-base.h 	modified:   src/base/base.vala 	modified:   src/ir-util/basicblock.vala 	modified:   src/ir-util/value-type-index.vala 	modified:   src/meson.build 	modified:   src/type/aggregate-type.vala 	new file:   src/type/struct-type.vala 	modified:   src/type/type-context.vala 	modified:   src/type/type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -6,12 +6,13 @@ musys_ir_src = files([
     'base/apint.vala',
     'base/base.vala',
     'base/stream.vala',
-    'type/function-type.vala',
-    'type/value-type.vala',
     'type/type.vala',
-    'type/type-context.vala',
-    'type/ref-type.vala',
+    'type/value-type.vala',
     'type/aggregate-type.vala',
+    'type/struct-type.vala',
+    'type/ref-type.vala',
+    'type/function-type.vala',
+    'type/type-context.vala',
     'ir/use-def.vala',
     'ir/value-type-check.vala',
     'ir/constant.vala',
