添加了向量类型 VectorType. 	modified:   include/musys-base.h 	modified:   src/base/base.vala 	modified:   src/ir-util/writer.vala 	modified:   src/meson.build 	modified:   src/type/aggregate-type.vala 	modified:   src/type/ref-type.vala 	modified:   src/type/struct-type.vala 	modified:   src/type/type-context.vala 	modified:   src/type/type.vala 	new file:   src/type/vector-type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ musys_ir_src = files([
     'type/value-type.vala',
     'type/aggregate-type.vala',
     'type/struct-type.vala',
+    'type/vector-type.vala',
     'type/ref-type.vala',
     'type/function-type.vala',
     'type/type-context.vala',
