- 更新了 TypeMismatchErr 等异常处理. 顺便吐槽一下, 底层的 GObject 都   支持给异常加字段了, 结果 Vala 的 errordomain 语法怎么还不支持? - 为了避免搞出循环引用, 让类型的唯一性受损, 本次更新把指针类型换成不透明的.    这是体量最大的更新, 几乎所有指令和值都受到了影响. - 结构体类型的 fields 属性可以写了. 顺便增加了几个与其他结构体交换字段的   方法. 	modified:   src/base/exception.vala 	new file:   src/base/gee-array-slice.vala 	modified:   src/ir-util/value-type-index.vala 	modified:   src/ir-util/writer.vala 	modified:   src/ir/basic-block.vala 	modified:   src/ir/const-data.vala 	modified:   src/ir/const-ptr-null.vala 	modified:   src/ir/constant.vala 	modified:   src/ir/function.vala 	modified:   src/ir/global-alias.vala 	modified:   src/ir/global-object.vala 	modified:   src/ir/global-variable.vala 	modified:   src/ir/instruction-alloca.vala 	modified:   src/ir/instruction-binary.vala 	modified:   src/ir/instruction-call-base.vala 	modified:   src/ir/instruction-call.vala 	modified:   src/ir/instruction-index-base.vala 	modified:   src/ir/instruction-index-extract.vala 	modified:   src/ir/instruction-index-insert.vala 	modified:   src/ir/instruction-index-ptr.vala 	modified:   src/ir/instruction-load.vala 	modified:   src/ir/instruction-store.vala 	modified:   src/ir/instruction-unary.vala 	new file:   src/ir/ipointer-storage.vala 	modified:   src/ir/use-def.vala 	modified:   src/ir/value-type-check.vala 	modified:   src/meson.build 	modified:   src/optimize/pass.vala 	modified:   src/type/aggregate-type.vala 	renamed:    src/type/value-type.vala -> src/type/primitive-type.vala 	modified:   src/type/ref-type.vala 	modified:   src/type/struct-type.vala 	modified:   src/type/type-context.vala 	modified:   src/type/type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -6,8 +6,9 @@ musys_ir_src = files([
     'base/apint.vala',
     'base/base.vala',
     'base/stream.vala',
+    'base/gee-array-slice.vala',
     'type/type.vala',
-    'type/value-type.vala',
+    'type/primitive-type.vala',
     'type/aggregate-type.vala',
     'type/struct-type.vala',
     'type/vector-type.vala',
@@ -15,6 +16,7 @@ musys_ir_src = files([
     'type/function-type.vala',
     'type/type-context.vala',
     'ir/use-def.vala',
+    'ir/ipointer-storage.vala',
     'ir/value-type-check.vala',
     'ir/constant.vala',
     'ir/const-data.vala',
