修了一些 Bug; 更新了 CallBase 及其子类. 因为 C 的变长参数太复杂, 所以 Musys-IR 现在不支持变长参数了. 	modified:   src/base/gee-array-slice.vala 	modified:   src/ir-util/writer.vala 	modified:   src/ir/instruction-binary.vala 	modified:   src/ir/instruction-branch.vala 	modified:   src/ir/instruction-call-base.vala 	modified:   src/ir/instruction-call.vala 	modified:   src/ir/instruction-index-ptr.vala 	modified:   src/ir/instruction-jump-base.vala 	modified:   src/ir/instruction-load.vala 	modified:   src/ir/instruction-phi.vala 	modified:   src/ir/instruction-unary.vala 	modified:   src/ir/instruction.vala 	modified:   src/ir/ivalue-visitor.vala 	modified:   src/meson.build 	new file:   src/optimize/control-flow/README.md 	new file:   src/optimize/control-flow/cfg.vala 	new file:   src/optimize/control-flow/dominance-tree.vala 	new file:   src/optimize/data-flow/README.md 	modified:   src/optimize/pass.vala 	modified:   src/type/function-type.vala 	modified:   src/type/struct-type.vala 	modified:   src/type/type-context.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -65,6 +65,9 @@ musys_ir_deps = [
     dependency('gee-0.8')
 ]
 
+add_project_arguments('--enable-mem-profiler', language: 'vala')
+add_project_arguments('--enable-gobject-tracing', language: 'vala')
+
 musys_lib = shared_library(
     'musys',
     sources: musys_ir_src,
