- 修了一堆 Bug - 添加了结构体常量 	modified:   src/ir-util/writer.vala 	modified:   src/ir/const-array.vala 	modified:   src/ir/const-expr.vala 	new file:   src/ir/const-struct.vala 	modified:   src/ir/constant.vala 	modified:   src/ir/function.vala 	modified:   src/ir/global-variable.vala 	modified:   src/ir/ivalue-visitor.vala 	modified:   src/meson.build 	modified:   src/type/function-type.vala 	modified:   src/type/ref-type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -23,6 +23,7 @@ musys_ir_src = files([
     'ir/const-undefined.vala',
     'ir/const-expr.vala',
     'ir/const-array.vala',
+    'ir/const-struct.vala',
     'ir/const-ptr-null.vala',
     'ir/global-object.vala',
     'ir/global-variable.vala',
