改了一堆 bug. 	modified:   include/musys-base.h 	modified:   src/base/exception.vala 	modified:   src/base/gee-array-slice.vala 	modified:   src/base/stdc.vala 	modified:   src/ir-util/basicblock.vala 	modified:   src/ir-util/module.vala 	modified:   src/ir-util/value.vala 	modified:   src/ir-util/writer.vala 	modified:   src/ir/instruction-alloca.vala 	modified:   src/ir/instruction-call-base.vala 	modified:   src/ir/instruction-call.vala 	modified:   src/ir/instruction-index-ptr.vala 	modified:   src/ir/instruction-list.vala 	modified:   src/ir/instruction-load.vala 	modified:   src/ir/instruction-store.vala 	modified:   src/ir/instruction.vala 	modified:   src/ir/value-type-check.vala 	modified:   src/meson.build

--- a/src/meson.build
+++ b/src/meson.build
@@ -74,8 +74,9 @@ musys_lib = shared_library(
     sources: musys_ir_src,
     dependencies: musys_ir_deps,
     include_directories: musys_include,
+    vala_gir: 'Musys-0.0.1.gir',
     install: true,
-    install_dir: [true, true, true]
+    install_dir: [true, true, true, true]
 )
 
 message(musys_lib.name())
