错误处理相关: - 使用 C 重写了 backtrace 相关, 现在 Musys 可以跨平台编译了 - 添加了 crash_err() 用于处理 Error 相关的崩溃

--- a/src/meson.build
+++ b/src/meson.build
@@ -60,6 +60,7 @@ musys_ir_src = files([
     'ir-util/writer.vala',
     'ir-util/valueref-compress.vala',
     'optimize/pass.vala',
+    '../csource/musys-backtrace.c',
 ])
 
 musys_ir_deps = [
