modified:   README.md 	modified:   meson.build 	modified:   src/meson.build

--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,18 @@
-project('musys', ['c', 'vala'], version: '0.0.1')
+project('musys-ir', ['c', 'vala'], version: '0.0.1')
 
-musys_include_str='./include'
-message('[Musys] Include directory: '+ musys_include_str)
-musys_include=include_directories([
+musys_ir_version= '0.0.1'
+musys_include_str='include'
+message('[MusysIR] Include directory: '+ musys_include_str)
+
+musys_include= include_directories([
     musys_include_str,
     'src'
 ])
 
 subdir('src')
 
-musys_dep = declare_dependency(
+musys_ir_dep = declare_dependency (
     include_directories: musys_include,
-    link_with: musys_lib
+    link_with: musys_ir_lib,
+    version:   musys_ir_version
 )
