--- a/src/meson.build
+++ b/src/meson.build
@@ -43,6 +43,7 @@ musys_ir_src = files([
     'ir/instruction-store.vala',
     'ir/instruction-jump.vala',
     'ir/instruction-return.vala',
+    'ir/instruction-binary-select.vala',
     'ir/instruction-index-base.vala',
     'ir/instruction-index-insert.vala',
     'ir/instruction-index-extract.vala',
