- Adjusted definitions of constant aggregates. Now   they're childs of `ConstAggregate` class. - (ABI BREAK) Renamed `StructExpr` to `ConstStruct`,    `ArrayExpr` to `ConstArray`. - Added constant expressions `ConstIndexPtrExpr`   and `ConstOffsetOfExpr`. - Added instruction `SwitchSSA`.
	modified:   src/base/base.vala
	modified:   src/base/exception.vala
	modified:   src/ir-util/clone-function.vala
	modified:   src/ir-util/dataflow-printer.vala
	modified:   src/ir-util/module.vala
	modified:   src/ir-util/value-type-index.vala
	modified:   src/ir-util/writer.vala
	modified:   src/ir/basic-block.vala
	new file:   src/ir/const-aggregate.vala
	modified:   src/ir/const-array.vala
	modified:   src/ir/const-data.vala
	modified:   src/ir/const-expr.vala
	new file:   src/ir/const-index.vala
	modified:   src/ir/const-struct.vala
	modified:   src/ir/instruction-index-base.vala
	modified:   src/ir/instruction-index-extract.vala
	modified:   src/ir/instruction-index-ptr.vala
	new file:   src/ir/instruction-switch.vala
	modified:   src/ir/instruction.vala
	modified:   src/ir/ivalue-visitor.vala
	modified:   src/ir/module.vala
	modified:   src/ir/use-def.vala
	modified:   src/ir/value-type-check.vala
	modified:   src/meson.build
	modified:   src/type/aggregate-type.vala
	new file:   src/type/platform.vala
	modified:   src/type/primitive-type.vala
	modified:   src/type/ref-type.vala
	modified:   src/type/struct-type.vala
	modified:   src/type/type-context.vala
	modified:   src/type/vector-type.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -14,6 +14,7 @@ musys_ir_src = files([
     'type/vector-type.vala',
     'type/ref-type.vala',
     'type/function-type.vala',
+    'type/platform.vala',
     'type/type-context.vala',
     'ir/use-def.vala',
     'ir/ipointer-storage.vala',
@@ -22,8 +23,10 @@ musys_ir_src = files([
     'ir/const-data.vala',
     'ir/const-undefined.vala',
     'ir/const-expr.vala',
+    'ir/const-aggregate.vala',
     'ir/const-array.vala',
     'ir/const-struct.vala',
+    'ir/const-index.vala',
     'ir/const-ptr-null.vala',
     'ir/global-object.vala',
     'ir/global-variable.vala',
@@ -36,12 +39,13 @@ musys_ir_src = files([
     'ir/instruction-phi.vala',
     'ir/instruction.vala',
     'ir/instruction-branch.vala',
+    'ir/instruction-jump.vala',
+    'ir/instruction-switch.vala',
     'ir/instruction-unreachable.vala',
     'ir/instruction-binary.vala',
     'ir/instruction-cast.vala',
     'ir/instruction-load.vala',
     'ir/instruction-store.vala',
-    'ir/instruction-jump.vala',
     'ir/instruction-return.vala',
     'ir/instruction-binary-select.vala',
     'ir/instruction-index-base.vala',
