Added `ForeachResult` enumeration.
	new file:   src/base/algorithm.vala
	modified:   src/base/base.vala
	modified:   src/base/gee-array-slice.vala
	deleted:    src/base/hash.vala
	modified:   src/ir/instruction-branch.vala
	modified:   src/ir/instruction-jump-base.vala
	modified:   src/ir/instruction-jump.vala
	modified:   src/ir/instruction-return.vala
	modified:   src/ir/instruction-switch.vala
	modified:   src/ir/instruction-unreachable.vala
	modified:   src/ir/instruction.vala
	modified:   src/meson.build

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,10 +1,9 @@
 musys_ir_src = files([
     'base/exception.vala',
     'base/stdc.vala',
-    'base/hash.vala',
-    'base/fmt.vala',
     'base/apint.vala',
     'base/base.vala',
+    'base/algorithm.vala',
     'base/stream.vala',
     'base/gee-array-slice.vala',
     'type/type.vala',
