Added DFS tree in CFG
	modified:   src/meson.build
	new file:   src/optimize/control-flow/dfs-tree.vala
	new file:   src/optimize/optimize.vala
	modified:   src/optimize/pass.vala

--- a/src/meson.build
+++ b/src/meson.build
@@ -65,7 +65,9 @@ musys_ir_src = files([
     'ir-util/writer.vala',
     'ir-util/dataflow-printer.vala',
     'ir-util/clone-function.vala',
+    'optimize/optimize.vala',
     'optimize/pass.vala',
+    'optimize/control-flow/dfs-tree.vala',
     '../csource/musys-backtrace.c',
 ])
 
